[gd_scene load_steps=4 format=3 uid="uid://dufdijd12kum3"]

[ext_resource type="Script" path="res://battle/status_icon.gd" id="1_v656o"]
[ext_resource type="Texture2D" uid="uid://di5afkjhrnv2t" path="res://assets/ui/battle/monblock/status_leak.png" id="2_tr5r0"]
[ext_resource type="Texture2D" uid="uid://c1a0nsgge6w7r" path="res://assets/ui/battle/monblock/status_sleep.png" id="3_1chlq"]

[node name="StatusIcon" type="Node2D"]
script = ExtResource("1_v656o")

[node name="RotateTimer" type="Timer" parent="."]
autostart = true

[node name="StatusLeak" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_tr5r0")

[node name="StatusSleep" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
texture = ExtResource("3_1chlq")
